fixed overflow-x bug again and updated About Me bio

--- a/src/components/AboutMeComponent.css
+++ b/src/components/AboutMeComponent.css
@@ -44,7 +44,6 @@
         margin-bottom: 20px;
     }
     .content-wrapper > p{
-        color: black; 
         font-size: 15px;
         margin-left: 0px;
         margin-right: 20%;
