--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,149 +1,156 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  max-width: 1500px;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 80vw;
+  justify-content: end;
+}
+
+
+.nav-item {
+  height: 100%;
+}
+
+.nav-links {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 1rem 1rem;
+  height: 100%;
+}
+
+.nav-links:hover {
+  border-bottom: 4px solid #fff;
+  transition: all 0.2s ease-out;
+}
+
+.fa-bars {
+  color: #fff;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+.nav-item > .active {
+  border-bottom: 4px solid #fff;
+  transition: all 0.2s ease-out;
+} 
+
+@media all and (max-width: 960px) {
+  body{
+    overflow-x: hidden;
   }
-  
-  .navbar-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-    max-width: 1500px;
-    overflow-x: hidden; 
+
+  .NavbarItems {
+    position: relative;  
   }
+
+  /* .navbar-container {
+    overflow-x: hidden;
+  } */
   
   .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    grid-gap: 10px;
-    list-style: none;
-    text-align: center;
-    width: 80vw;
-    justify-content: end;
+      display: flex;
+      flex-direction: column;
+      width: 0px;
+      overflow-x: hidden;
+      height: 35vh;
+      position: absolute;
+      top: 80px;
+      right: -100%;
+      opacity: 1;
+      transition: all 0.5s ease;
   }
   
+  .nav-menu.active {
+      background: #242222;
+      right: 0;
+      opacity: 1;
+      transition: all 0.5s ease;
+      z-index: 1;
+      width: 30%;
+  }
 
-  .nav-item {
-    height: 100%;
-  }
-  
   .nav-links {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 1rem 1rem;
-    height: 100%;
+      text-align: center;
+      padding: 1rem;
+      width: 100%;
+      display: table;
   }
   
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
-    transition: all 0.2s ease-out;
-  }
-  
-  .fa-bars {
-    color: #fff;
-  }
-  
-  .nav-links-mobile {
-    display: none;
+      background-color: #fff;
+      color: #242424;
+      border-radius: 0;
   }
   
   .menu-icon {
-    display: none;
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      transform: translate(-100%, 60%);
+      font-size: 1.8rem;
+      cursor: pointer;
   }
   
-  .nav-item > .active {
-    border-bottom: 4px solid #fff;
-    transition: all 0.2s ease-out;
-  } 
-
-  @media all and (max-width: 960px) {
-    .NavbarItems {
-      position: relative;  
-    }
-
-    .nav-menu {
-        display: flex;
-        flex-direction: column;
-        width: 30%;
-        height: 35vh;
-        position: absolute;
-        top: 80px;
-        right: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-    }
-    
-    .nav-menu.active {
-        background: #242222;
-        right: 0;
-        opacity: 1;
-        transition: all 0.5s ease;
-        z-index: 1;
-    }
-
-    .nav-links {
-        text-align: center;
-        padding: 1rem;
-        width: 100%;
-        display: table;
-    }
-    
-    .nav-links:hover {
-        background-color: #fff;
-        color: #242424;
-        border-radius: 0;
-    }
-    
-    .menu-icon {
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translate(-100%, 60%);
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
-    
-    .fa-times {
-        color: #fff;
-        font-size: 2rem;
-    }
-    
-    .nav-links-mobile {
-        display: block;
-        text-align: center;
-        margin: 2rem auto;
-        border-radius: 4px;
-        width: 80%;
-        text-decoration: none;
-        font-size: 1.5rem;
-        background-color: transparent;
-        color: #fff;
-        padding: 14px 20px;
-        border: 1px solid #fff;
-        transition: all 0.3s ease-out;
-    }
-    
-    .nav-links-mobile:hover {
-        background: #F9F9F9;
-        color: #242424;
-        transition: 250ms;
-    }
-
-    .nav-item > .active {
+  .fa-times {
+      color: #fff;
+      font-size: 2rem;
+  }
+  
+  .nav-links-mobile {
+      display: block;
+      text-align: center;
+      margin: 2rem auto;
+      border-radius: 4px;
+      width: 80%;
+      text-decoration: none;
+      font-size: 1.5rem;
+      background-color: transparent;
+      color: #fff;
+      padding: 14px 20px;
+      border: 1px solid #fff;
+      transition: all 0.3s ease-out;
+  }
+  
+  .nav-links-mobile:hover {
       background: #F9F9F9;
       color: #242424;
       transition: 250ms;
-    } 
-}  
+  }
 
-
+  .nav-item > .active {
+    background: #F9F9F9;
+    color: #242424;
+    transition: 250ms;
+  } 
+} 
